fixed right container scrollbar

--- a/frontend/css/toolbar.scss
+++ b/frontend/css/toolbar.scss
@@ -1,7 +1,12 @@
+#rightContainerToolbar {
+    height: 37px;
+}
+
 #toolbarContainer {
     padding-right: 40px;
     padding-left: 40px;
-    height: 40px;
+    height: 37px;
+    border-bottom: solid 1px #CBCED2;
 }
 
 .toolbarIcon {
